--- a/show/index.html
+++ b/show/index.html
@@ -7,6 +7,7 @@
             font-size: 12px;
         }
     </style>
+     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <!-- 开发环境版本，包含了有帮助的命令行警告 -->
 	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
