--- a/show/index.html
+++ b/show/index.html
@@ -73,6 +73,11 @@
      
                     axios.get('/huyapenta/'+ String(this.datalength)).then(res => {
                     console.log(res)
+                    res.data.result.forEach(element => {
+                        let time = new Date(element.time)
+                        element.time = this.transformtime(time)
+                    });
+
                     this.huyadata = res.data.result
                     console.log(this.datalength)
                     })
@@ -88,6 +93,20 @@
                         this.getdata()
                         console.log("数据更新")
                     }
+                },
+                transformtime:function(date){
+                    var y = date.getFullYear()
+                    var m = date.getMonth() + 1
+                    m = m < 10 ? '0' + m : m
+                    var d = date.getDate()
+                    d = d < 10 ? '0' + d : d
+                    var h = date.getHours()
+                    h = h < 10 ? '0' + h : h
+                    var minute = date.getMinutes()
+                    minute = minute < 10 ? '0' + minute : minute
+                    var second = date.getSeconds()
+                    second = second < 10 ? '0' + second : second
+                    return y + '-' + m + '-' + d + ' ' + h + ':' + minute + ':' + second
                 }
             }
         })
